# raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  bounding_box.h  bvh.cpp  bvh.h  camera.cpp  camera.h  direction_light.h  dump_png.cpp  flamegraph.html  flat_shader.cpp  flat_shader.h  image_to_window.cpp  main.cpp  object.h  parse.cpp  perf.data  perf.data.old  phong_shader.cpp  phong_shader.h  point_light.h  print_ascii.py  ray.h  render.cpp  scene1.txt  set_colors.h  shader.h  sphere.cpp  sphere.h  util.h  vec.h  world.cpp  world.h
lights/: direction_light.h  light.h  point_light.h
objects/: mesh.cpp  mesh.h  object.h  parallelogram.cpp  parallelogram.h  plane.cpp  plane.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
scenes/: scene1.txt  ts0.txt  ts1.txt  ts11.txt  ts14.txt  ts15.txt  ts16.txt  ts3.txt  ts4.txt  ts6.txt  ts7.txt  ts9.txt  ts_12.txt  ts_13.txt  ts_15.txt  ts_16.txt  ts_2.txt  ts_5.txt  ts_9.txt
shaders/: flat_shader.cpp  flat_shader.h  normal_shader.h  phong_shader.cpp  phong_shader.h  shader.h
source/: bounding_box.h  bvh.cpp  bvh.h  camera.cpp  camera.h  config.h  dump_png.cpp  image_to_window.cpp  main.cpp  parse.cpp  ray.h  render.cpp  set_colors.h  util.h  vec.h  world.cpp  world.h
txtdata/: 021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  041.txt  042.txt  043.txt  044.txt  045.txt  046.txt  047.txt  048.txt  049.txt  050.txt  051.txt  052.txt  053.txt  054.txt  055.txt  056.txt  057.txt  058.txt  (+30 more)
(+28 files in other folders)
